Ready to send to curriculum committee.

--- a/courses/COMP1000.md
+++ b/courses/COMP1000.md
@@ -24,11 +24,11 @@ Part 1: Computing {-}
 By the end of part 1 of this course, a student should be able to:
 
 1. Represent basic information and ideas abstractly, and digitally. :represent:
-2. Use and evaluate computational ideas from first-principles (logic &rarr;
-   circuits &rarr; processors & computers). :first-principles:
+2. Use and evaluate computational ideas from the ground-up (logic &rarr;
+   circuits &rarr; processors & computers). :ground-up:
 3. Implement abstractions as software (assembly language, visual language).
    :program:
-4. Use and evaluate searching algorithms. :algorithms:
+4. Use and evaluate searching and sorting algorithms. :algorithms:
 5. Gain a better understanding of computer science as a discipline. :concepts:
 
 Part 2: Programming {-}
@@ -36,13 +36,17 @@ Part 2: Programming {-}
 
 By the end of part 2 of this course, a student should be able to:
 
-1. Transfer programming skills to a new programming language. :program:
-2. Use and implement data structures to represent complex information.
-   :data-structures:
-3. Write code that can handle failures gracefully. :exceptions:
-4. Apply searching and sorting algorithms to collections, compare efficiency.
+1. Transfer programming skills to a new programming language and gain *new*
+   programming skills to support more complex problems. :program:
+2. *Apply* searching and sorting algorithms to collections, compare efficiency.
    :algorithms:
-5. Formulate recursive solutions to problems and write recursive methods.
+3. Use and implement classes to represent complex, real-world information
+   digitally. :oo:
+4. Read structured records from files into the complex classes you've created.
+   :files:
+5. Use and implement data structures to represent complex, *abstract*
+   information. :data-structures:
+6. Formulate recursive solutions to problems and write recursive methods.
    :recursion:
 
 Learning objectives {-}
@@ -61,6 +65,9 @@ the disciplines *within* computer science.
 
 1. Approachable problems and problem descriptions that require *no* knowledge of
    computer science, and no use of computers on the part of the student.
+    * For example: crypto and caesar ciphers could be a simple cryptogram. You
+      can draw pictures of graphs for short sequence assemblies without having
+      to write code.
 2. Visits by grad students: A day in the life.
 3. Visits by co-op students: Where have they worked? Where do they want to work?
 4. Visits by faculty: What do they study? How do they study that?
@@ -71,9 +78,16 @@ By the end of this unit, students should be able to:
 
 1. List and describe at least 2 different subdisciplines of computer science
    (name of subdiscipline, what the subdiscipline studies, how it studies
-   that). :concepts:
+   that). :concepts: [=comp1500-theoretical-computer-science] 
 2. Approach upper-year and grad students either directly or through student
    clubs for guidance. :concepts:
+   
+Some examples of subdisciplines and problems that students might look at:
+
+1. [*comp1500-bioinformatics]
+2. [*comp1500-cryptography]
+3. [*comp1500-machine-learning-ai]
+4. ...
 
 ### What even is a computer?
 
@@ -89,16 +103,27 @@ capable of computing.
 
 #### Ideas for instruction {-}
 
+* Take a historical tour through computing. What's the etymology of the word?
+* Give students examples of problems and ask them to decide if they can or
+  cannot solve the problem (without *trying* to solve the problem).
+* Take a look at "[Turing & The Halting Problem]" on Computerphile.
+
+[Turing & The Halting Problem]: https://www.youtube.com/watch?v=macM_MtS_w4
+
 #### Objectives {-}
 
 By the end of this unit, students should be able to:
 
 1. List and explain at least two different interpretations of the word
-   "computer".  :concepts:
+   "computer". :concepts:
+2. List key contributors to what has become modern computing, and describe the
+   contributions they have made. :concepts:
 2. Give an example of a problem that a computer is capable of solving.
-   :concepts:
+   :concepts: :ground-up: [~comp1500-halting-problem]
 3. Give an example of a problem that a computer is **not** capable of solving.
-   :concepts:
+   :concepts: :ground-up: [~comp1500-halting-problem]
+4. Describe the "halting problem". :ground-up: :concepts:
+   [=comp1500-halting-problem]
 
 ### How do you represent *stuff*?
 
@@ -112,6 +137,10 @@ information in such a way that computers can actually do something with them.
 
 #### Ideas for instruction {-}
 
+* Have students draw a mind map, try to be as detailed as possible.
+* Have students convert between number systems.
+* Get students to independently make their own communication protocol, then have
+  them try communicating between each other. This could be a group activity.
 * Have students encode images in, e.g., [ppm].
 
 #### Objectives {-}
@@ -119,15 +148,17 @@ information in such a way that computers can actually do something with them.
 By the end of this unit, students should be able to:
 
 1. [*comp1500-real-world-translation] 
-2. [*comp1500-decomposing-problems]
-3. [*comp1500-listing-number-systems]
-4. [*comp1500-converting-between-number-systems]
-5. [*comp1500-binary-as-on-and-off]
-6. [*comp1500-text-as-numbers]
-7. [*comp1500-explain-standards-requirement]
-8. [*comp1500-digital-images]
-9. [*comp1500-encode-an-image]
-10. [*comp1500-predict-animation]
+2. Find examples of how things in the real world *interact* with each other.
+   :represent: [=comp1500-interfaces-between-objects]
+3. [*comp1500-decomposing-problems]
+4. [*comp1500-listing-number-systems]
+5. [*comp1500-converting-between-number-systems]
+6. [*comp1500-binary-as-on-and-off]
+7. [*comp1500-text-as-numbers]
+8. [*comp1500-explain-standards-requirement]
+9. [*comp1500-digital-images]
+10. [*comp1500-encode-an-image]
+11. [*comp1500-predict-animation]
 
 ### How can we *compute* stuff?
 
@@ -142,6 +173,14 @@ interesting characters (Turing, Boole), and, ideally, take a look at computing
 and computation from a historical and international perspective.
 
 #### Ideas for instruction {-}
+
+* Give the students a basic primer on logical expressions, then ask them to
+  evaluate them.
+* Use truth tables to list all possible states of a logical expression.
+* Crash course computer science has [a good video on Alan Turing], with a
+  description of Turing machines.
+
+[a good video on Alan Turing]: https://www.youtube.com/watch?v=7TycxwFmdB0
 
 #### Objectives {-}
 
@@ -175,6 +214,9 @@ still some pretty big gaps in our body of knowledge:
 2. Some images that I've seen floating around building logic gates physically:
     * [Logic gates with dominoes]
     * [Logic gates with water]
+3. Give the students circuits without telling them what the operation is (e.g.,
+   demonstrate adders, show them a multiplier) and ask them to figure out what
+   the operation is by evaluating the circuit on different inputs.
 
 [Logic gates with dominoes]:
 https://www.reddit.com/r/geek/comments/gvw4iy/logic_gates_using_dominoes/
@@ -212,18 +254,30 @@ result).
 
 #### Ideas for instruction {-}
 
+* Ken Shirriff has some great posts with microscopic photos of processors.
+    * [8008](http://www.righto.com/2016/12/die-photos-and-analysis-of_24.html)
+    * [8086](http://www.righto.com/2020/06/a-look-at-die-of-8086-processor.html)
+* In terms of addressing memory: ask the students to play "Battleship" or some
+  similar game -- they're physically addressing by calling out locations on a
+  grid.
+* Get students to come up with real-life examples of their own primary and
+  secondary memory.
+
 #### Objectives {-}
 
 By the end of this unit, students should be able to:
 
-1. [*comp1500-alu-terms]
-2. [*comp1500-purpose-of-alu]
-3. [*comp1500-instructions-and-numbers]
-4. [*comp1500-physical-analogs-to-memory]
-5. [*comp1500-compare-primary-secondary-memory]
-6. [*comp1500-control-unit-purpose]
-7. [*comp1500-memory-addressing]
-8. [*comp1500-memory-to-registers]
+1. [*comp1500-label-von-neumann]
+2. [*comp1500-classify-von-neumann-components]
+3. [*comp1500-turing-abstract-von-neumann-reality]
+4. [*comp1500-alu-terms]
+5. [*comp1500-purpose-of-alu]
+6. [*comp1500-instructions-and-numbers]
+7. [*comp1500-physical-analogs-to-memory]
+8. [*comp1500-compare-primary-secondary-memory]
+9. [*comp1500-control-unit-purpose]
+10. [*comp1500-memory-addressing]
+11. [*comp1500-memory-to-registers]
 
 ### PROGRAMMING!
 
@@ -243,6 +297,13 @@ ability to write down the instructions that we want to give to a computer in a
 way that the computer can understand and act on.
 
 #### Ideas for instruction {-}
+
+* Have the students actually write some simple programs in class, on paper.
+* The assembly language has several different interpreters, see [C1500 Mark III]
+  and [COMP 1500 Assembly Emulator].
+  
+[C1500 Mark III]: https://www.cs.umanitoba.ca/~comp1500/
+[COMP 1500 Assembly Emulator]: https://github.com/fbristow/c1500-emulator
 
 #### Objectives {-}
 
@@ -270,18 +331,18 @@ order physical things in your own life.
 
 #### Ideas for instruction {-}
 
-1. Get a collection of physical objects that you can ask students to "find"
-   things by a specific property.
-2. Get a collection of physical objects that you can ask students to "sort"
-   things by a specific property.
-3. After instruction on searching and sorting algorithms, ask the students to
-   apply the operations literally on their collection of things, ask them to
-   make some observations about what the algorithms are doing.
-4. Ask the students to compare their own ad hoc searching and sorting approaches
-   to the searching and sorting algorithms you've given them instruction on. Is
-   it *possible* for a computer to do the kinds of searching and sorting they're
-   doing? Is what they're doing in any way equivalent to what the algorithms are
-   doing?
+* Get a collection of physical objects that you can ask students to "find"
+  things by a specific property.
+* Get a collection of physical objects that you can ask students to "sort"
+  things by a specific property.
+* After instruction on searching and sorting algorithms, ask the students to
+  apply the operations literally on their collection of things, ask them to make
+  some observations about what the algorithms are doing.
+* Ask the students to compare their own ad hoc searching and sorting approaches
+  to the searching and sorting algorithms you've given them instruction on. Is
+  it *possible* for a computer to do the kinds of searching and sorting they're
+  doing? Is what they're doing in any way equivalent to what the algorithms are
+  doing?
 
 #### Objectives {-}
 
@@ -301,6 +362,7 @@ By the end of this unit, students should be able to:
 5. [*comp1500-apply-sorting] [=comp1020-describe-basic-sorting-algorithms]
 7. [*comp1020-compare-sorting-algorithms]
 8. [*comp1500-sorting-complexity] [=comp1020-complexity-of-sorting-algorithms]
+9. [*comp1020-choose-an-algorithm-based-on-data]
 
 ### Programming (like, for real this time)
 
@@ -335,12 +397,20 @@ hardware.
 
 #### Ideas for instruction {-}
 
-1. The micro:bit environment is not strictly required here, and there are many
+* The micro:bit environment is not strictly required here, and there are many
    web sites and environments that use effectively the same underlying
    technology. [Scratch] is the most popular, but doesn't let you see the
    underlying JavaScript. [code.org] is also popular and comes with many
    examples, but doesn't let you *edit* JavaScript (you can *see* it, but can't
    edit).
+* Have the students actually [*buy* a micro:bit] (they're cheap, ~$20 for the
+  base board itself, ~$25 with a battery and micro USB cable).
+* Demonstrate *both* interfaces for programming (JS and visual editor), and
+  permit students to choose which one they want to use to complete their
+  assignments. Encourage students planning on going into CS to minimally *look
+  at* the text-based editor.
+
+[*buy* a micro:bit]: https://microbit.org/buy/
 
 [Scratch]: https://scratch.mit.edu/
 [code.org]: https://code.org
@@ -385,31 +455,27 @@ We're not going to learn everything about Java here, but instead we'll look at
 *just enough* for us to get started in the next unit. Throughout the course,
 we're going to be looking at lots of other Java-related topics.
 
-#### Ideas for instruction {-}
-
 #### Objectives {-}
 
 By the end of this unit, students should be able to:
 
 1. [*comp1020-choose-an-ide]
 2. [*comp1020-download-install-jdk]
-3. [*comp1020-compile-and-run-from-ide] [=comp1010-write-and-run]
-   [=comp1500-write-program-given-solution]
-   [=comp1020-write-compile-run-hello-world-java]
+3. [*comp1010-write-and-run] [=comp1500-write-program-given-solution]
 4. [*comp1010-declare-use-variables] [~comp1500-variables]
-   [=comp1020-use-primitives] [=comp1020-use-variables-in-java]
    [~comp1010-use-literals]
 5. [*comp1020-use-naming-conventions]
-6. [*comp1010-choose-meaningful-names] [=comp1020-choose-concise-variable-names]
-7. [*comp1010-comments] [=comp1020-use-comments]
-8. [*comp1010-write-simple-functions] [=comp1500-custom-functions]
-   [=comp1020-write-and-call-java-methods]
-9. [*comp1010-functions-with-params-return]
-10. Extract "sentinel" values into named constants.
+6. [*comp1010-choose-meaningful-names]
+7. [*comp1010-comments] 
+8. [*comp1020-name-parts-of-method]
+9. [*comp1010-write-simple-functions] [=comp1500-custom-functions]
+10. [*comp1020-file-scoped-static-variables]
+11. [*comp1010-functions-with-params-return]
+12. Extract "sentinel" values into named constants.
     [=comp1010-identify-constant-values]
     [~comp1010-compare-constants-and-variables] :program:
-11. [*comp1010-basic-print-debugging]
-12. Get keyboard input using the `Scanner` class and the `nextInt` method.
+13. [*comp1010-basic-print-debugging]
+14. Get keyboard input using the `Scanner` class and the `nextInt` method.
      [~comp1010-accept-use-input] [~comp1020-input-with-scanner]
      [~comp1500-visual-io] [=comp1500-io] :program:
 
@@ -426,8 +492,6 @@ several new tasks:
 1. Represent *collections* of primitive information (arrays), and
 2. Search through and sort collections of information in *code*.
 
-#### Ideas for instruction {-}
-
 #### Objectives {-}
 
 By the end of this unit, students should be able to:
@@ -439,14 +503,15 @@ By the end of this unit, students should be able to:
 5. [*comp1010-use-conditional-statements]
 6. [*comp1010-else-if-nested-blocks]
 7. [*comp1010-use-basic-loops] [=comp1010-evaluate-loop-execution]
-8. [*comp1010-implement-linear-search]
+8. [*comp1020-foreach-java-loops]
+9. [*comp1010-implement-linear-search]
    [~comp1020-write-binary-and-linear-search]
-9. [*comp1010-implement-binary-search]
+10. [*comp1010-implement-binary-search]
    [~comp1020-write-binary-and-linear-search]
-10. [*comp1020-compare-searching-algorithms]
-11. [*comp1020-describe-basic-sorting-algorithms]
-12. [*comp1020-write-sorting-algorithms]
-13. [*comp1020-compare-sorting-algorithms]
+11. [*comp1020-compare-searching-algorithms]
+12. [*comp1020-describe-basic-sorting-algorithms]
+13. [*comp1020-write-sorting-algorithms]
+14. [*comp1020-compare-sorting-algorithms]
 
 ### Representing complex information
 
@@ -468,8 +533,6 @@ represent complex information using a concept called "classes". We're going to
 use classes to represent complex information like physical things, and abstract
 things that aren't just simple numbers.
 
-#### Ideas for instruction {-}
-
 #### Objectives {-}
 
 By the end of this unit, students should be able to:
@@ -480,18 +543,19 @@ By the end of this unit, students should be able to:
 4. [*comp1010-evaluate-casting-in-expression]
 5. [*comp1010-explain-effects-of-casting]
 6. [*comp1010-create-use-strings]
-7. [*comp1010-string-comparison]
-8. [*comp1020-explain-basic-oo-concepts]
-9. [*comp1020-create-and-use-a-class]
-10. [*comp1010-create-and-use-boolean-variables]
-11. [*comp1020-evaluate-method-overloading]
-12. [*comp1020-composite-objects]
-13. [*comp1020-write-self-referencing-classes]
-14. [*comp1020-create-and-use-subclasses]
-15. [*comp1020-decide-which-property-is-referred-to-in-scope]
-16. [*comp1020-upcast-and-downcast-instances]
-17. [*comp1020-design-a-hierarchy-before-use]
-18. [*comp1020-describe-mental-model-of-hierarchy]
+7. [*comp1020-escape-characters]
+8. [*comp1010-string-comparison] 
+9. [*comp1020-explain-basic-oo-concepts]
+10. [*comp1020-create-and-use-a-class]
+11. [*comp1010-create-and-use-boolean-variables]
+12. [*comp1020-evaluate-method-overloading]
+13. [*comp1020-composite-objects]
+14. [*comp1020-write-self-referencing-classes]
+15. [*comp1020-create-and-use-subclasses]
+16. [*comp1020-decide-which-property-is-referred-to-in-scope]
+17. [*comp1020-upcast-and-downcast-instances]
+18. [*comp1020-design-a-hierarchy-before-use]
+19. [*comp1020-describe-mental-model-of-hierarchy]
 
 ### Getting lots of information
 
@@ -511,20 +575,19 @@ Now we're going to take a look at how to use files in our programs to work with
 going to learn how to get data out of a file and into the classes that we've
 been building.
 
-#### Ideas for instruction {-}
-
 #### Objectives {-}
 
 By the end of this unit, students should be able to:
 
 1. [*comp1020-read-and-write-files] [=comp1020-read-from-a-file]
-2. [*comp1010-convert-numbers-strings]
-3. [*comp1020-tokenizing-strings]
-4. [*comp1010-create-use-char]
-5. [*comp1010-use-nested-loops]
-6. [*comp1010-use-nested-mixed-control-structures]
-7. [*comp1010-use-flags-for-events]
-8. [*comp1010-accumulate-data]
+2. [*comp1020-write-code-to-read-files-handle-exceptions]
+3. [*comp1010-convert-numbers-strings]
+4. [*comp1020-tokenizing-strings]
+5. [*comp1010-create-use-char]
+6. [*comp1010-use-nested-loops]
+7. [*comp1010-use-nested-mixed-control-structures]
+8. [*comp1010-use-flags-for-events]
+9. [*comp1010-accumulate-data]
 
 ### Data structures, abstract data types, and software design
 
@@ -544,24 +607,19 @@ first dip into data structures and abstract data types. One part of what we're
 going to do here is to compare and contrast implementations to see which one is
 best, and how to choose the best one for a specific situation.
 
-#### Ideas for instruction {-}
-
-1. Implement a linked list.
-2. Extract the interface/ADT.
-3. Implement an array list that satisfies the same interface.
-4. Compare and contrast by experimentation.
-5. Ask students to implement a hybrid array/linked list (use fixed size arrays
-   that are linked on filling).
-
 #### Objectives {-}
 
 By the end of this unit, students should be able to:
 
 1. [*comp1020-compare-data-structures] [=comp1010-list-array-limitations]
    [=comp1020-differences-between-list-and-array]
-2. [*comp1020-create-and-use-linked-list-class]
+2. [*comp1020-multi-file-compilation]
+3. [*comp1020-automated-testing]
+4. [*comp1020-create-and-use-linked-list-class]
    [=comp1020-lists-for-collections]
-3. [*comp1020-choose-a-reasonable-data-structure]
+5. [*comp1020-array-as-list-data-structure]
+6. [*comp1020-explain-differences-between-data-structures]
+7. [*comp1020-choose-a-reasonable-data-structure]
 
 ### Recursion
 
@@ -583,8 +641,6 @@ We're going to look at recursion from two perspectives:
 
 [recurrence relations]: https://en.wikipedia.org/wiki/Recurrence_relation
 [Fibonacci sequence]: https://en.wikipedia.org/wiki/Fibonacci_number
-
-#### Ideas for instruction {-}
 
 #### Objectives {-}
 
