--- a/courses/COMP1020.md
+++ b/courses/COMP1020.md
@@ -57,12 +57,12 @@ By the end of this unit, students should be able to:
    :program#choose-an-ide:
 2. Download, install, and configure the JDK. :program#download-install-jdk:
 3. Compile and run a Java program from within an IDE (DrJava is noted
-   specifically). :program#compile-and-run-from-ide: [=comp1010-write-and-run]
+   specifically). :program: [=comp1010-write-and-run]
 4. Compile and run a Java program from the command-line on a remote machine
    (`aviary.cs.umanitoba.ca` is noted specifically).
    :program#compile-and-run-command-line:
 5. Write, compile, and run a basic Java program with a `main` method.
-   :program#write-compile-run-hello-world-java: [=comp1010-write-and-run]
+   :program: [=comp1010-write-and-run]
 
 ### Create and use variables in a program
 
@@ -70,26 +70,24 @@ By the end of this unit, students should be able to:
 
 1. Observe and apply course-specific naming conventions when naming classes,
    methods, and variables. :program#use-naming-conventions:
-2. Use `String` values and variables in a program. :program#use-strings:
+2. Use `String` values and variables in a program. :program:
    [=comp1010-create-use-strings]
 3. Use primitive type values and variables in a program.
-   :program#use-primitives: [=comp1010-declare-use-variables]
+   :program: [=comp1010-declare-use-variables]
 4. Use the `+` operator in different contexts (e.g., primitive types,
-   concatenation with `String`). :program#use-add-concat-operator:
-   [=comp1010-create-use-strings]
+   concatenation with `String`). :program: [=comp1010-create-use-strings]
 5. Predict the type of the result of an expression using different primitive
    type values (e.g., `int` + `double` &rarr; `double`).
-   :evaluate#predict-type-of-expression: [=comp1010-determine-expression-type]
+   :evaluate: [=comp1010-determine-expression-type]
 6. Use a variety of other arithmetic operators in expressions. (&plus;, &minus;,
-   &times;, &divide;, mod). :program#use-arithmetic-operators:
+   &times;, &divide;, mod). :program:
    [=comp1010-write-evaluate-arithmetic-expressions]
 7. Declare, assign, and use variables in a Java program.
-   :program#use-variables-in-java: [=comp1010-declare-use-variables]
-8. Choose meaningful but concise names for variables.
-   :communicate#choose-concise-variable-names:
+   :program: [=comp1010-declare-use-variables]
+8. Choose meaningful but concise names for variables.  :communicate:
    [=comp1010-choose-meaningful-names]
 9. Use comments to provide additional context for code.
-   :communicate#use-comments: [=comp1010-comments]
+   :communicate: [=comp1010-comments]
 10. Write an assignment statement (i.e., `int x = ...;`) where the type of the
     variable on the left side is *compatible with* the result of the expression
     on the right. :program#assignment-expressions-with-types:
@@ -101,11 +99,11 @@ By the end of this unit, students should be able to:
 1. Name the parts of a method definition (e.g., signature, body, modifiers,
    return type, name, parameters). :communicate#name-parts-of-method:
 2. Write and call methods in a Java program.
-   :program#write-and-call-java-methods: [=comp1010-write-simple-functions]
+   :program: [=comp1010-write-simple-functions]
 3. Declare and use file-scoped (`static`) variables in a Java program.
    :program#file-scoped-static-variables: [~comp1010-use-global-variable]
 4. Declare and use named constants in a Java program.
-   :program#use-named-constants-java: [=comp1010-use-named-constants]
+   :program: [=comp1010-use-named-constants]
 
 ### Get and use input in a program
 
@@ -122,43 +120,39 @@ By the end of this unit, students should be able to:
 By the end of this unit, students should be able to:
 
 1. Convert from `String` to primitive types using the `TYPE.parseTYPE()` family
-   of methods (e.g., `Integer.parseInt()`) :program#strings-to-primitives:
+   of methods (e.g., `Integer.parseInt()`) :program:
    [=comp1010-convert-numbers-strings]
 2. Convert from primitive types to `String` using the `TYPE.toString()` family
    of methods (e.g., `Integer.toString()`). :program#primitives-to-strings:
 3. Convert between primitive types with implicit upcasting and explicit
-   downcasting. :program#use-upcasting-downcasting:
-   [=comp1010-casting-between-number-types]
+   downcasting. :program: [=comp1010-casting-between-number-types]
 
 ### Write code concisely
 
 By the end of this unit, students should be able to:
 
 1. Increment and decrement number-type variables with the `++` and `--`
-   operators, both prefix and postfix.
-   :program#use-increment-decrement-operators: [=comp1010-use-compound-operator]
-2. Increment and decrement number-type variables with the `+=`, `-=`, `*=`, and
-   `\=` operators. :program#use-compound-operators:
+   operators, both prefix and postfix. :program:
    [=comp1010-use-compound-operator]
+2. Increment and decrement number-type variables with the `+=`, `-=`, `*=`, and
+   `\=` operators. :program: [=comp1010-use-compound-operator]
 3. Write and use Boolean expressions with logical and relational operators.
-   :program#use-boolean-expressions-with-operators:
-   [=comp1010-use-relational-operators]
+   :program: [=comp1010-use-relational-operators]
    [=comp1010-evaluate-complex-boolean-expression]
 4. Test `String`s for equality using the `.equals` method.
-   :program#testing-equality-of-strings:
+   :program: [=comp1010-string-comparison]
 5. Write concise Boolean expressions (i.e., prefer to use `value` instead of
-   `value == true` and `!value` instead of `value != true`).
-   :program#concise-boolean-expressions:
+   `value == true` and `!value` instead of `value != true`).  :program:
    [=comp1010-no-extraneous-boolean-comparison]
     
 ### Write and use control structures in a program
 
 By the end of this unit, students should be able to:
 
-1. Write and use conditional statements. :program#conditional-statements:
+1. Write and use conditional statements. :program:
    [=comp1010-use-conditional-statements]
-2. Write and use loop structures (`for`, `while`, and `do`/`while`).
-   :program#loop-structures: [=comp1010-use-basic-loops]
+2. Write and use loop structures (`for`, `while`, and `do`/`while`).  :program:
+   [=comp1010-use-basic-loops]
 3. Use `break` and `continue` in a loop structure. :program#break-continue:
 
 ### Create and use `String` values in a program
@@ -168,7 +162,7 @@ By the end of this unit, students should be able to:
 1. Use the escape character `\` to place special characters in `String` literals
    (e.g., `"`, `\n`, `\t`). :program#escape-characters:
 2. Use `String` methods on an instance of a `String` (e.g., `equals`,
-   `equalsIgnoreCase`, `length`, `charAt`). :program#string-methods:
+   `equalsIgnoreCase`, `length`, `charAt`). :program:
    [=comp1010-evaluate-string-expressions]
     
 ### Use a language library
@@ -176,29 +170,26 @@ By the end of this unit, students should be able to:
 By the end of this unit, students should be able to:
 
 1. Use methods and constants from the `Math` library (e.g., `pow`, `min`, `max`,
-   `PI`, `random`). :program#math-functions:
-   [=comp1010-call-math-library-functions]
+   `PI`, `random`). :program: [=comp1010-call-math-library-functions]
 
 ### Create and use arrays in a program
 
 By the end of this unit, students should be able to:
 
-1. Create and use arrays in a program. :program#use-arrays:
-   [=comp1010-create-use-arrays]
+1. Create and use arrays in a program. :program: [=comp1010-create-use-arrays]
 2. List the default values in an array for different types (e.g., `int` &rarr;
-   `0`, `String` &rarr; `null`). :communicate#list-default-array-values:
+   `0`, `String` &rarr; `null`). :communicate:
    [=comp1010-list-default-array-values-for-type]
 3. Get the number of elements in an array with the `.length` property.
-   :program#count-elements-in-array: [=comp1010-create-use-arrays]
+   :program: [=comp1010-create-use-arrays]
 4. Loop over all of the elements in an array with a `for` loop.
-   :program#loop-over-array: [=comp1010-create-use-arrays]
+   :program: [=comp1010-create-use-arrays]
 5. Use utility methods from the `Arrays` class (e.g., `Arrays.toString`).
    :program#use-arrays-class:
-6. Copy the contents of an array to a new array. :program#copy-an-array:
+6. Copy the contents of an array to a new array. :program:
    [=comp1010-copy-array-contents]
 7. Explain why simple assignment does not copy the contents of an array.
-   :communicate#explain-necessity-of-loop-copy-array:
-   [=comp1010-explain-differences-between-primitives-and-arrays]
+   :communicate: [=comp1010-explain-differences-between-primitives-and-arrays]
 8. Use a "for each"-style loop in Java (i.e., `for (int elem : data)`).
    :program#foreach-java-loops:
 
@@ -274,18 +265,12 @@ By the end of this unit, students should be able to:
 2. Given a piece of code, draw a diagram representing the state of references in
    a multi-dimensional array. :data-structures:
    :communicate#describe-mental-model-of-data:
-3. Create "useful" instance methods for a class. [^useful-methods]
+3. Create "useful" instance methods for a class. 
    :design#identify-common-operations: 
 4. Separate code into multiple files, then recompile into a single program.
    :program#multi-file-compilation: &2160&
 5. Write a simple, manual testing method for a class, in a separate file.
    :testing#automated-testing: &2160&
-
-[^useful-methods]: In the context of this course, a "useful" instance method is
-one that provides matrix operations on a class that contains a multi-dimensional
-array. I think the *intention* of this objective is that students be able to
-generally lift reasonable operations on the object to its interface, but the
-course only demonstrates this as writing operations on a matrix.
 
 File I/O and exceptions
 -----------------------
@@ -307,7 +292,7 @@ By the end of this unit, students should be able to:
 5. List the order of operations in a `try`/`catch`/`finally` block, given a
    piece of code. :evaluate#list-order-of-exception-handling-code:
 6. Read and write text files in a program.
-   :program#read-and-write-files:
+   :program#read-and-write-files: :files:
 7. Parse the contents of a file by tokenizing strings in a program (e.g.,
    `String#split` or `Scanner`). :files#tokenizing-strings: &2140&
     1. Create an instance of a class based on the data that's contained within a
@@ -352,7 +337,7 @@ By the end of this unit, students should be able to:
 2. Draw a diagram representing related classes in a hierarchy.  :oo:
    :communicate#describe-mental-model-of-hierarchy:
 
-Strings[^strings], ArrayLists
+Strings, ArrayLists
 -------------------
 
 By the end of this unit, students should be able to:
@@ -367,9 +352,6 @@ By the end of this unit, students should be able to:
    interface). :data-structures:
    :communicate#explain-differences-between-data-structures:
    
-[^strings]: The only learning objective related to `String`s in this unit is to be
-able to list/memorize and use *more* `String` methods.
-
 Linked Lists
 ------------
 
@@ -411,7 +393,7 @@ By the end of this unit, students should be able to:
    problem, and explain why. :recursion:
    :communicate#explain-limitations-of-recursion:
    
-Searching[^searching] and sorting
+Searching and sorting
 ---------------------------------
 
 By the end of this unit, students should be able to:
@@ -444,5 +426,3 @@ By the end of this unit, students should be able to:
    selection sort, recursive merge sort, quick sort).  :algorithms:
    :program#write-sorting-algorithms: &2160&
 
-[^searching]: Both linear search and binary search are COMP 1010 learning
-objectives.
