--- a/courses/COMP1500.md
+++ b/courses/COMP1500.md
@@ -17,8 +17,8 @@ By the end of this course, a student should be able to:
 
 1. Represent information abstractly and digitally. :represent:
 2. Apply problem-solving skills. :problem-solving:
-3. Use and evaluate computational ideas from first principles.
-   :first-principles:
+3. Use and evaluate computational ideas from the ground-up.
+   :ground-up:
 4. Use and evaluate algorithms. :algorithms:
 5. Implement abstractions as software. :program:
 6. Apply computer science concepts to solve problems in different disciplines in
@@ -32,15 +32,15 @@ Introduction
 
 By the end of this unit, students should be able to:
 
-1. Label the components of a Turing machine. :first-principles#turing-machines:
+1. Label the components of a Turing machine. :ground-up#turing-machines:
 2. Given a Turing machine and a tape, evaluate the output of the machine.
-   :first-principles#evaluate-turing-machine:
+   :ground-up#evaluate-turing-machine:
 3. Label all of the components of a von Neumann machine.
-   :first-principles#label-von-neumann:
+   :ground-up#label-von-neumann:
 4. Classify contemporary computer components in the von Neumann architecture.
-   :first-principles#classify-von-neumann-components:
+   :ground-up#classify-von-neumann-components:
 5. List at least four areas of theoretical computer science.
-   :first-principles#theoretical-computer-science:
+   :ground-up#theoretical-computer-science:
 6. Represent properties of and relationships between real-world objects as a
    mind-map. :represent#real-world-translation:
 7. Identify interfaces between objects in the real world.
@@ -77,41 +77,41 @@ How computers work
 
 By the end of this unit, students should be able to:
 
-1. Evaluate logical expressions. :first-principles#evaluate-logical-expressions:
+1. Evaluate logical expressions. :ground-up#evaluate-logical-expressions:
 2. Draw a truth table for a logical operator (e.g., `XOR`).
-   :first-principles#truth-tables:
+   :ground-up#truth-tables:
 3. Translate between circuits and logical expressions.
-   :first-principles#expressions-as-circuits:
-4. Draw a half and full adder. :first-principles#draw-adders:
+   :ground-up#expressions-as-circuits:
+4. Draw a half and full adder. :ground-up#draw-adders:
 5. Evaluate the execution of a half adder given inputs.
-   :first-principles#evaluate-adders:
+   :ground-up#evaluate-adders:
 6. Determine the purpose of a circuit (e.g., what arithmetic operation does this
-   circuit implement?). :first-principles#circuits-to-arithmetic:
+   circuit implement?). :ground-up#circuits-to-arithmetic:
 7. Predict the output of a circuit, given specific inputs.
-   :first-principles#predict-the-output-circuits:
+   :ground-up#predict-the-output-circuits:
 8. Explain how a circuit can be used to make a decision.
-   :first-principles#conditional-circuits:
+   :ground-up#conditional-circuits:
 
 ### General purpose computing
 
 By the end of this unit, students should be able to:
 
 1. Define the terms "ALU", "opcodes", and "assembly language".
-   :first-principles#alu-terms:
-2. Explain the purpose of an ALU in a CPU. :first-principles#purpose-of-alu:
+   :ground-up#alu-terms:
+2. Explain the purpose of an ALU in a CPU. :ground-up#purpose-of-alu:
 3. Explain why using an assembly language is preferable to using binary to issue
    instructions to an ALU. :represent#instructions-and-numbers:
 4. Give a physical example of temporary memory (e.g., pencil and paper).
-   :first-principles#physical-analogs-to-memory:
+   :ground-up#physical-analogs-to-memory:
 5. Compare and contrast primary memory and secondary memory.
-   :first-principles#compare-primary-secondary-memory:
+   :ground-up#compare-primary-secondary-memory:
 6. Explain the purpose of a control unit in a CPU.
-   :first-principles#control-unit-purpose:
-7. Explain how memory can be addressed. :first-principles#memory-addressing:
+   :ground-up#control-unit-purpose:
+7. Explain how memory can be addressed. :ground-up#memory-addressing:
 8. Explain how data is moved from memory to registers.
-   :first-principles#memory-to-registers:
+   :ground-up#memory-to-registers:
 9. Describe the relationship between Turing machines and the von Neumann
-   architecture. :first-principles#turing-abstract-von-neumann-reality:
+   architecture. :ground-up#turing-abstract-von-neumann-reality:
    
 ### Assembly language programming
 
