Sent to curriculum committee.

--- a/courses/COMP1000.md
+++ b/courses/COMP1000.md
@@ -76,13 +76,13 @@ the disciplines *within* computer science.
 
 By the end of this unit, students should be able to:
 
-1. List and describe at least 2 different subdisciplines of computer science
-   (name of subdiscipline, what the subdiscipline studies, how it studies
+1. List and describe at least 2 different sub-disciplines of computer science
+   (name of sub-discipline, what the sub-discipline studies, how it studies
    that). :concepts: [=comp1500-theoretical-computer-science] 
 2. Approach upper-year and grad students either directly or through student
    clubs for guidance. :concepts:
    
-Some examples of subdisciplines and problems that students might look at:
+Some examples of sub-disciplines and problems that students might look at:
 
 1. [*comp1500-bioinformatics]
 2. [*comp1500-cryptography]
@@ -382,8 +382,8 @@ The micro:bit editor gives us the ability to create programs in two ways:
 2. Using a programming language called JavaScript.
 
 The choice for how you want to create your program is entirely up to you, but if
-you plan on moving to COMP 1000 pt 2, your transition will be *easier* if you
-start taking a look at JavaScript here.
+you plan on moving to COMP 1000.2, your transition will be *easier* if you start
+taking a look at JavaScript here.
 
 The assembly language that we looked at before is considered to be an
 "unstructured" programming language --- it's literally just instructions. The
@@ -537,6 +537,8 @@ things that aren't just simple numbers.
 
 By the end of this unit, students should be able to:
 
+#### *Slightly* more complex
+
 1. [*comp1010-use-floating-point]
 2. [*comp1010-evaluate-float-expression]
 3. [*comp1010-explain-difference-number-types]
@@ -545,17 +547,20 @@ By the end of this unit, students should be able to:
 6. [*comp1010-create-use-strings]
 7. [*comp1020-escape-characters]
 8. [*comp1010-string-comparison] 
-9. [*comp1020-explain-basic-oo-concepts]
-10. [*comp1020-create-and-use-a-class]
-11. [*comp1010-create-and-use-boolean-variables]
-12. [*comp1020-evaluate-method-overloading]
-13. [*comp1020-composite-objects]
-14. [*comp1020-write-self-referencing-classes]
-15. [*comp1020-create-and-use-subclasses]
-16. [*comp1020-decide-which-property-is-referred-to-in-scope]
-17. [*comp1020-upcast-and-downcast-instances]
-18. [*comp1020-design-a-hierarchy-before-use]
-19. [*comp1020-describe-mental-model-of-hierarchy]
+
+#### Building *your own* types
+
+1. [*comp1020-explain-basic-oo-concepts]
+2. [*comp1020-create-and-use-a-class]
+3. [*comp1010-create-and-use-boolean-variables]
+4. [*comp1020-evaluate-method-overloading]
+5. [*comp1020-composite-objects]
+6. [*comp1020-write-self-referencing-classes]
+7. [*comp1020-create-and-use-subclasses]
+8. [*comp1020-decide-which-property-is-referred-to-in-scope]
+9. [*comp1020-upcast-and-downcast-instances]
+10. [*comp1020-design-a-hierarchy-before-use]
+11. [*comp1020-describe-mental-model-of-hierarchy]
 
 ### Getting lots of information
 
